Speech facility added

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <body>
     <img src="https://raw.githubusercontent.com/bradtraversy/vanillawebprojects/master/speak-number-guess/img/mic.png"
     alt="microphone">
-    <h1>Guess a number between 1 - 100</h1>
+    <h1 id="main-heading">Guess a number between 1 - 100</h1>
     <h3>Speak number into microphone</h3>
     <div id="chance"></div>
     <div id="msg" class="msg"></div>
+    <button id="btn" class="play-again">Start Game</button>
 
     <script src="/script.js"></script>
 </body>
